# shift_fastapi

./: .dockerignore  .env  .env.example  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  alembic.ini  import_test_data.py  pyproject.toml  test_data.json
alembic/: env.py
app/: main.py
app/api/: __init__.py  routers.py
app/api/v1/: __init__.py  routers.py  user.py
app/api/v1/endpoints/: __init__.py  user.py
app/auth/: __init__.py  routers.py
app/core/: __init__.py  base.py  config.py  constants.py  db.py  user.py
app/migrations/: env.py
app/migrations/versions/: 19210cecc5e9_initial_migration.py  efcdfff569be_.py
app/models/: user.py
app/schemas/: __init__.py  salary.py  user.py
infra/: docker-compose-dev.yaml  docker-compose-prod.yaml
tests/: test_api.py
